# mero-compiler

./: CMakeLists.txt  README.md  mero_app.py  pyproject.toml
examples/: game_loop.py  hello.py  player.py
include/mero/: arena.h  error.h  hash_map.h  string_pool.h
src/core_c/: arena.c  error.c  hash_map.c  string_pool.c
src/engine_cpp/: ast_nodes.h  ast_printer.cpp  ast_printer.h  ast_visitor.h  builtin_mapper.cpp  builtin_mapper.h  codegen_luau.cpp  codegen_luau.h  compiler.cpp  compiler.h  diagnostics.cpp  diagnostics.h  ir_builder.cpp  ir_builder.h  ir_nodes.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  semantic_analyzer.cpp  semantic_analyzer.h  symbol_table.h  tokens.h  type_checker.cpp  type_checker.h
src/python_cli/: __init__.py  bindings.py  bundler.py  cache.py  cli.py  compiler.py  config.py  constants.py  exceptions.py  fallback_compiler.py  formatter.py  logger.py  minifier.py  module_resolver.py  plugin_loader.py  profiler.py  project.py  repl.py  roblox_api.py  source_map.py  stdlib_bridge.py  test_runner.py  utils.py  validator.py  watcher.py
src/runtime_luau/: async_runtime.luau  class_system.luau  comprehension.luau  debugger.luau  decorator.luau  error_handler.luau  event_system.luau  exception.luau  generator.luau  iterator.luau  memory_manager.luau  module_loader.luau  profiler.luau  proxy.luau  runtime.luau  sandbox.luau  signal.luau  stdlib_io.luau  stdlib_math.luau  stdlib_os.luau  stdlib_string.luau  stdlib_table.luau  type_system.luau
src/win_app/: mero_win.c  resource.rc
